PhrasalMert: make it so running a command can combine stdout & stderr.  Start adding a MERT command.
svn path=/trunk/javanlp/; revision=36457